# EvoLabeler-AIAgent-MLOps

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DevelopPrompt.md  GIT_PUSH_TESTING.md  LICENSE  PROJECT_IMPROVEMENTS.md  PR_DRAFT.md  README.md  README_EN.md  SECURITY.md  TESTING_COMPLETE.md  UPDATE_SUMMARY.md  package.json  start.sh
backend/: .env.example  .gitignore  README.md  SUPABASE_KEY_FIX.md  TEST_REPORT.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  acquisition_agent.py  analysis_agent.py  base_agent.py  evaluation_agent.py  inference_agent.py  prompts.py  state.py  training_agent.py
backend/app/core/: config.py  config_validator.py  logging_config.py
backend/app/db/: DATABASE_DESIGN.md  __init__.py  models.py  supabase_init.py
backend/app/services/: __init__.py  advanced_orchestrator.py  data_quality_gate.py  model_guardian.py  orchestrator.py  workflow_graph.py
backend/docs/: API.md  ARCHITECTURE.md  PROJECT_MANAGEMENT.md  PROJECT_SUMMARY.md  SETUP.md  SETUP_COMPLETE.md  SUPABASE_GUIDE.md  TROUBLESHOOTING.md
backend/scripts/: API_KEY_SOLUTION.md  create_tables_auto.py  insert_test_data.py  insert_test_data.sql  insert_test_projects.py  setup_database.py  setup_supabase.sql  test_supabase_connection.py  verify_supabase_data.py
backend/tests/: TESTING_COMPLETE.md  quick_playwright_test.py  test_full_system.py  test_graph.py  test_playwright_download_images.py  test_results.json  test_web_crawler.py
docs/: mermaid.md  (+2 more)
(+145 files in other folders)
