[tool.poetry]
name = "evolabeler-backend"
version = "0.1.0"
description = "EvoLabeler-Backend: A Multi-Agent Driven MLOps Engine for Remote Sensing Image Object Detection"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.6.0"
supabase = "^2.9.0"
playwright = "^1.48.0"
langgraph = "^0.2.40"
paramiko = "^3.4.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
